--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 荷花池
 subtitle: 小鱼儿的荷花池
-description: 记录工作,生活点滴
+description: python golang react postgres
 author: 小鱼儿
 language: zh-Hans
 timezone:
@@ -14,27 +14,39 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://127.0.0.1
 root: /
-permalink: :year/:month/:day/:title/
+#permalink: :year/:month/:day/:title/
+permalink: :category/:title.html
 permalink_defaults:
 
 # Directory
+
+# 资源文件夹,这个文件夹用来存放内容
 source_dir: source
+# 公共文件夹，这个文件夹用于存放生成的站点文件
 public_dir: public
+# 标签文件夹
 tag_dir: tags
+# 归档文件夹
 archive_dir: archives
+# 分类文件夹
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+# 新文章的文件名称
+new_post_name: :title.md
+# 预设布局
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+# 在新标签中打开链接
+external_link: true
 filename_case: 0
 render_drafts: false
+# 启动 Asset 文件夹
 post_asset_folder: true
+# 把链接改为与根目录的相对位址
 relative_link: false
 future: true
 highlight:
@@ -44,7 +56,7 @@ highlight:
   tab_replace:
 
 # Category & Tag
-default_category: uncategorized
+default_category: 杂文
 category_map:
 tag_map:
 
