--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ root: /
 #permalink: :year/:month/:day/:title/
 permalink: :category/:title.html
 permalink_defaults:
+avatar: /uploads/avatar.png
 
 # Directory
 
@@ -81,4 +82,10 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
