--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 小鱼儿博客
+title:
 subtitle: 
 description: 你说你有点难追 我就打断你大腿
 author: littleFish
