--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -85,9 +85,9 @@ menu:
   tags: /tags/ || tags
   categories: /categories/ || th
   archives: /archives/ || archive
-  commonweal: /404/ || heartbeat
 #  schedule: /schedule/ || calendar
 #  sitemap: /sitemap.xml || sitemap
+#  commonweal: /404/ || heartbeat
 
 # Enable/Disable menu icons.
 menu_icons:
@@ -169,8 +169,8 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-#  display: post
-  display: always
+  display: post
+#  display: always
   #display: hide
   #display: remove
 
